<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/map2">


    <Button
        android:textColor="@color/TextWhite"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="170dp"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/rounded"
        android:text="@string/f_11"
        android:textSize="30sp"
        android:id="@+id/level_11"/>


    <Button
        android:textColor="@color/TextWhite"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="20dp"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/rounded"
        android:text="@string/f_12"
        android:textSize="30sp"
        android:id="@+id/level_12"/>


    <Button
        android:textColor="@color/TextWhite"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="170dp"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/rounded"
        android:text="@string/f_13"
        android:textSize="30sp"
        android:id="@+id/level_13"/>


    <Button
        android:textColor="@color/TextWhite"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="320dp"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/rounded"
        android:text="@string/f_14"
        android:textSize="30sp"
        android:id="@+id/level_14"/>


    <Button
        android:textColor="@color/TextWhite"
        android:layout_marginLeft="525dp"
        android:layout_marginTop="20dp"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/rounded"
        android:text="@string/_15"
        android:textSize="30sp"
        android:id="@+id/level_15"/>


    <Button
        android:textColor="@color/TextWhite"
        android:layout_marginLeft="525dp"
        android:layout_marginTop="170dp"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/rounded"
        android:text="@string/f_16"
        android:textSize="30sp"
        android:id="@+id/level_16"/>


    <Button
        android:textColor="@color/TextWhite"
        android:layout_marginLeft="525dp"
        android:layout_marginTop="320dp"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/rounded"
        android:text="@string/f_17"
        android:textSize="30sp"
        android:id="@+id/level_17"/>


    <Button
        android:textColor="@color/TextWhite"
        android:layout_marginLeft="655dp"
        android:layout_marginTop="170dp"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/rounded"
        android:text="@string/f_18"
        android:textSize="30sp"
        android:id="@+id/level_18"/>


    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:text="Л"
        android:layout_alignParentRight="true"
        android:id="@+id/go_improve_hero"
        android:layout_alignParentEnd="true"
        android:background="@drawable/f_sheild_skills"/>
</RelativeLayout>