<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="30sp"
    android:background="@drawable/f_map1">


    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right"
        android:textColor="@color/TextWhite"
        android:text="Л"
        android:id="@+id/go_improve_hero"
        android:background="@drawable/f_sheild_skills"/>


<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_marginLeft="30sp"
    android:layout_marginRight="30sp">


    <Button
        android:layout_alignParentTop="true"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:text="@string/f_1"
        android:textColor="@color/TextWhite"
        android:textSize="30sp"
        android:id="@+id/level_1"
        android:background="@drawable/rounded"/>


    <Button
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/level_1"
        android:layout_marginLeft="100dp"
        android:text="@string/f_2"
        android:textSize="30sp"
        android:textColor="@color/TextWhite"
        android:id="@+id/level_2"
        android:background="@drawable/rounded"/>


    <Button
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_toLeftOf="@id/level_4"
        android:layout_alignParentTop="true"
        android:layout_marginRight="100dp"
        android:text="@string/f_3"
        android:textSize="30sp"
        android:textColor="@color/TextWhite"
        android:id="@+id/level_3"
        android:background="@drawable/rounded"/>


    <Button
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/f_4"
        android:textSize="30sp"
        android:textColor="@color/TextWhite"
        android:id="@+id/level_4"
        android:background="@drawable/rounded"/>


    <Button
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignRight="@id/level_2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:text="@string/f_5"
        android:textColor="@color/TextWhite"
        android:textSize="30sp"
        android:background="@drawable/rounded"
        android:id="@+id/level_5"/>


    <Button
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@id/level_3"
        android:text="@string/f_6"
        android:textColor="@color/TextWhite"
        android:textSize="30sp"
        android:background="@drawable/rounded"
        android:id="@+id/level_6"/>


    <Button
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/f_7"
        android:textSize="30sp"
        android:textColor="@color/TextWhite"
        android:id="@+id/level_7"
        android:background="@drawable/rounded"/>


    <Button
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/level_7"
        android:layout_marginLeft="100dp"
        android:text="@string/f_8"
        android:textSize="30sp"
        android:textColor="@color/TextWhite"
        android:id="@+id/level_8"
        android:background="@drawable/rounded"/>


    <Button
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/level_10"
        android:layout_marginRight="100dp"
        android:text="@string/f_9"
        android:textSize="30sp"
        android:textColor="@color/TextWhite"
        android:id="@+id/level_9"
        android:background="@drawable/rounded"/>


    <Button
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/f_10"
        android:textSize="30sp"
        android:textColor="@color/TextWhite"
        android:id="@+id/level_10"
        android:background="@drawable/rounded"/>


</RelativeLayout>
    </LinearLayout>